@@ -1856,10 +1856,13 @@ BEGIN
     VK_ESCAPE,      ID_ESC_EXIT,            VIRTKEY, NOINVERT
     "F",            ID_HACKER_FINDHANDLESORDLLS, VIRTKEY, CONTROL, NOINVERT
     "S",            ID_HACKER_SAVE,         VIRTKEY, CONTROL, NOINVERT
+    "L",            ID_HELP_LOG,            VIRTKEY, CONTROL, NOINVERT
     "M",            ID_PROCESS_SEARCHONLINE, VIRTKEY, CONTROL, NOINVERT
     VK_F5,          ID_VIEW_REFRESH,        VIRTKEY, NOINVERT
     "I",            ID_VIEW_SYSTEMINFORMATION, VIRTKEY, CONTROL, NOINVERT
-    "L",            ID_HELP_LOG,            VIRTKEY, CONTROL, NOINVERT
+    VK_PAUSE,       ID_VIEW_PAUSE,          VIRTKEY, NOINVERT
+    VK_TAB,         ID_TAB_NEXT,            VIRTKEY, CONTROL, NOINVERT
+    VK_TAB,         ID_TAB_PREV,            VIRTKEY, SHIFT, CONTROL, NOINVERT
 END
 
 
